--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://speedrun.org'
+baseURL = 'https://speedrun.swindlesmccoop.xyz'
 languageCode = 'en-us'
 title = 'Speedrun.com Alternative'
 theme = 'speedrun'
