--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://speedrun.swindlesmccoop.xyz'
 languageCode = 'en-us'
 title = 'Speedrun.com Alternative'
-theme = 'speedrun'
+favicon = '/favicon.ico'
